--- a/Covid_19.ipynb
+++ b/Covid_19.ipynb
@@ -9,7 +9,7 @@
       "collapsed_sections": [
         "a58Gjia9MDRw"
       ],
-      "authorship_tag": "ABX9TyOP9AnE4D6JROkZEsahcaZM",
+      "authorship_tag": "ABX9TyM/f8yRF6+0fMBnGkYSDBn0",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -78,8 +78,8 @@
         "  for col in df_temp.columns:\n",
         "    try:\n",
         "      col1 = col[:len(col)-2]+'20'+col[-2:]\n",
-        "      col_new = datetime.strptime(col1,'%M/%d/%Y')\n",
-        "      col_new = datetime.strftime(col_new, '%Y-%M-%d')\n",
+        "      col_new = datetime.strptime(col1,'%m/%d/%Y')\n",
+        "      col_new = datetime.strftime(col_new, '%Y-%m-%d')\n",
         "      df_temp.rename(columns={col: col_new}, inplace=True)\n",
         "    except:\n",
         "      pass\n",
@@ -275,6 +275,61 @@
         "\n",
         "title = 'Showing ' + country_selection\n",
         "plt.legend(handles=[line1, line2])\n",
+        "plt.title(title)\n",
+        "\n",
+        "plt.show()"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "XfcZxuJ-B2nY",
+        "colab_type": "code",
+        "colab": {},
+        "cellView": "form"
+      },
+      "source": [
+        "#@title\n",
+        "df_ = df_status.T.reset_index()\n",
+        "date_list=[]\n",
+        "days_list=[]\n",
+        "for index, row in aa.iterrows():\n",
+        "  if row['Recovered'] > 0:\n",
+        "    value_lookup = row['Recovered']\n",
+        "    for index2, row2 in aa.iterrows():\n",
+        "      if row2['Confirmed'] >= value_lookup:\n",
+        "        date1 = datetime.strptime(row['index'], '%Y-%m-%d')\n",
+        "        date2 = datetime.strptime(row2['index'], '%Y-%m-%d')\n",
+        "        recovery_time = date1-date2\n",
+        "        recovery_time_date = datetime.strftime(date1, '%Y-%m-%d')\n",
+        "        recovery_days = recovery_time.days\n",
+        "        date_list.append(recovery_time_date)\n",
+        "        days_list.append(recovery_days)\n",
+        "        break\n",
+        "\n",
+        "df_recovery_time = pd.DataFrame(days_list, index=date_list, columns=['RecoveryDays'])\n",
+        "\n",
+        "plt.style.use('ggplot')\n",
+        "y11 = 'RecoveryDays'\n",
+        "y21 = 'Recovered'\n",
+        "x = df_recovery_time.index\n",
+        "y1 = df_recovery_time[y11]\n",
+        "fig, ax1 = plt.subplots(figsize=(20,6))\n",
+        "\n",
+        "line1, = ax1.plot(x, y1, 'b-', label=y11)\n",
+        "\n",
+        "# ax1.set_ylim(0,55000)\n",
+        "start, end = ax1.get_xlim()\n",
+        "# stepsize = 5\n",
+        "ax1.xaxis.set_ticks(np.arange(start, end, stepsize))\n",
+        "\n",
+        "ax1.set_xlabel('Date')\n",
+        "ax1.set_ylabel('Days', color='b')\n",
+        "\n",
+        "title = 'Showing Recovery Time of ' + country_selection\n",
+        "plt.legend(handles=[line1])\n",
         "plt.title(title)\n",
         "\n",
         "plt.show()"
