--- a/Covid_19.ipynb
+++ b/Covid_19.ipynb
@@ -9,7 +9,7 @@
       "collapsed_sections": [
         "a58Gjia9MDRw"
       ],
-      "authorship_tag": "ABX9TyM/f8yRF6+0fMBnGkYSDBn0",
+      "authorship_tag": "ABX9TyNPrEiz+t+BfSzOqrUX3kgm",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -35,7 +35,15 @@
         "colab_type": "text"
       },
       "source": [
-        "# Covid-19"
+        "# Covid-19\n",
+        "\n",
+        "Data Source: https://github.com/CSSEGISandData/COVID-19\n",
+        " \n",
+        " \n",
+        "\n",
+        "To run this notebook: **CTRL + F9**\n",
+        "\n",
+        "To update when selecting different country: **CTRL + F10**"
       ]
     },
     {
@@ -292,13 +300,13 @@
       },
       "source": [
         "#@title\n",
-        "df_ = df_status.T.reset_index()\n",
+        "df_temp2 = df_status.T.reset_index()\n",
         "date_list=[]\n",
         "days_list=[]\n",
-        "for index, row in aa.iterrows():\n",
+        "for index, row in df_temp2.iterrows():\n",
         "  if row['Recovered'] > 0:\n",
         "    value_lookup = row['Recovered']\n",
-        "    for index2, row2 in aa.iterrows():\n",
+        "    for index2, row2 in df_temp2.iterrows():\n",
         "      if row2['Confirmed'] >= value_lookup:\n",
         "        date1 = datetime.strptime(row['index'], '%Y-%m-%d')\n",
         "        date2 = datetime.strptime(row2['index'], '%Y-%m-%d')\n",
@@ -328,7 +336,7 @@
         "ax1.set_xlabel('Date')\n",
         "ax1.set_ylabel('Days', color='b')\n",
         "\n",
-        "title = 'Showing Recovery Time of ' + country_selection\n",
+        "title = 'Showing Recovery Time after Confirmation of ' + country_selection\n",
         "plt.legend(handles=[line1])\n",
         "plt.title(title)\n",
         "\n",
