--- a/Covid_19.ipynb
+++ b/Covid_19.ipynb
@@ -9,7 +9,7 @@
       "collapsed_sections": [
         "a58Gjia9MDRw"
       ],
-      "authorship_tag": "ABX9TyNPrEiz+t+BfSzOqrUX3kgm",
+      "authorship_tag": "ABX9TyMGVm2895+X+X6T5pOuMGk4",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -116,6 +116,11 @@
         "       'Spain', 'Sweden',\n",
         "       'UK']\n",
         "\n",
+        "western = ['Australia', 'Belgium', 'Canada', 'Finland',\n",
+        "       'France', 'Germany', 'Italy', 'Japan',\n",
+        "       'Sweden',\n",
+        "       'UK', 'US']\n",
+        "\n",
         "all_countries = ['Australia', 'Belgium', 'Cambodia', 'Canada', 'Egypt', 'Finland',\n",
         "       'France', 'Germany', 'Hong Kong', 'India', 'Italy', 'Japan', 'Macau',\n",
         "       'Mainland China', 'Malaysia', 'Nepal', 'Others', 'Philippines',\n",
@@ -151,13 +156,15 @@
       },
       "source": [
         "#@markdown Select and Press CTRL + F10\n",
-        "country_selection = \"Europe\" #@param [\"All\", \"Not Mainland China\", \"Europe\", \"Russia\"] {allow-input: true}\n",
+        "country_selection = \"Europe\" #@param [\"All\", \"Not Mainland China\", \"Europe\", \"Europe + North America + Japan + Australia\", \"Russia\"] {allow-input: true}\n",
         "stepsize =  2#@param {type:\"integer\"}\n",
         "\n",
         "if country_selection == 'Not Mainland China':\n",
         "  df2 = df[df.index != 'Mainland China']\n",
         "elif country_selection == 'Europe':\n",
         "  df2 = df[df.index.isin(europe)]\n",
+        "elif country_selection == 'Europe + North America + Japan + Australia':\n",
+        "  df2 = df[df.index.isin(western)]\n",
         "elif country_selection == 'Russia':\n",
         "  df2 = df[df.index == 'Russia']\n",
         "else:\n",
@@ -240,6 +247,7 @@
         "ax1.xaxis.set_ticks(np.arange(start, end, stepsize))\n",
         "\n",
         "ax1.set_xlabel('Date')\n",
+        "ax1.set_ylabel('Number of people')\n",
         "\n",
         "title = 'Showing ' + country_selection\n",
         "plt.legend(handles=[line1, line2])\n",
@@ -280,6 +288,7 @@
         "ax1.xaxis.set_ticks(np.arange(start, end, stepsize))\n",
         "\n",
         "ax1.set_xlabel('Date')\n",
+        "ax1.set_ylabel('Number of people')\n",
         "\n",
         "title = 'Showing ' + country_selection\n",
         "plt.legend(handles=[line1, line2])\n",
@@ -318,6 +327,8 @@
         "        break\n",
         "\n",
         "df_recovery_time = pd.DataFrame(days_list, index=date_list, columns=['RecoveryDays'])\n",
+        "\n",
+        "# print(df_recovery_time  )\n",
         "\n",
         "plt.style.use('ggplot')\n",
         "y11 = 'RecoveryDays'\n",
