--- a/Covid_19.ipynb
+++ b/Covid_19.ipynb
@@ -9,7 +9,7 @@
       "collapsed_sections": [
         "a58Gjia9MDRw"
       ],
-      "authorship_tag": "ABX9TyMGVm2895+X+X6T5pOuMGk4",
+      "authorship_tag": "ABX9TyPXAJZRgzsTSlpRf5sJYTr2",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -156,7 +156,7 @@
       },
       "source": [
         "#@markdown Select and Press CTRL + F10\n",
-        "country_selection = \"Europe\" #@param [\"All\", \"Not Mainland China\", \"Europe\", \"Europe + North America + Japan + Australia\", \"Russia\"] {allow-input: true}\n",
+        "country_selection = \"All\" #@param [\"All\", \"Not Mainland China\", \"Europe\", \"Europe + North America + Japan + Australia\", \"Russia\"] {allow-input: true}\n",
         "stepsize =  2#@param {type:\"integer\"}\n",
         "\n",
         "if country_selection == 'Not Mainland China':\n",
@@ -304,17 +304,22 @@
       "metadata": {
         "id": "XfcZxuJ-B2nY",
         "colab_type": "code",
-        "colab": {},
-        "cellView": "form"
+        "cellView": "form",
+        "colab": {}
       },
       "source": [
         "#@title\n",
         "df_temp2 = df_status.T.reset_index()\n",
         "date_list=[]\n",
         "days_list=[]\n",
+        "mortality_rate_list=[]\n",
         "for index, row in df_temp2.iterrows():\n",
         "  if row['Recovered'] > 0:\n",
         "    value_lookup = row['Recovered']\n",
+        "    value2_lookup = row['Confirmed']\n",
+        "    value3_lookup = row['Deaths']\n",
+        "    mortality_rate = value3_lookup / value2_lookup * 100\n",
+        "    mortality_rate_list.append(mortality_rate)\n",
         "    for index2, row2 in df_temp2.iterrows():\n",
         "      if row2['Confirmed'] >= value_lookup:\n",
         "        date1 = datetime.strptime(row['index'], '%Y-%m-%d')\n",
@@ -327,17 +332,20 @@
         "        break\n",
         "\n",
         "df_recovery_time = pd.DataFrame(days_list, index=date_list, columns=['RecoveryDays'])\n",
-        "\n",
+        "df_mortality_rate = pd.DataFrame(mortality_rate_list, index=date_list, columns=['MortalityRate'])\n",
         "# print(df_recovery_time  )\n",
         "\n",
         "plt.style.use('ggplot')\n",
         "y11 = 'RecoveryDays'\n",
-        "y21 = 'Recovered'\n",
+        "y21 = 'MortalityRate'\n",
         "x = df_recovery_time.index\n",
         "y1 = df_recovery_time[y11]\n",
+        "y2 = df_mortality_rate[y21]\n",
         "fig, ax1 = plt.subplots(figsize=(20,6))\n",
         "\n",
+        "ax2 = ax1.twinx()\n",
         "line1, = ax1.plot(x, y1, 'b-', label=y11)\n",
+        "line2, = ax2.plot(x, y2, 'r-', label=y21)\n",
         "\n",
         "# ax1.set_ylim(0,55000)\n",
         "start, end = ax1.get_xlim()\n",
@@ -346,9 +354,10 @@
         "\n",
         "ax1.set_xlabel('Date')\n",
         "ax1.set_ylabel('Days', color='b')\n",
+        "ax2.set_ylabel('%', color='r')\n",
         "\n",
-        "title = 'Showing Recovery Time after Confirmation of ' + country_selection\n",
-        "plt.legend(handles=[line1])\n",
+        "title = 'Showing COVID-19 Development Statics of ' + country_selection\n",
+        "plt.legend(handles=[line1,line2], loc='upper left')\n",
         "plt.title(title)\n",
         "\n",
         "plt.show()"
