--- a/Covid_19.ipynb
+++ b/Covid_19.ipynb
@@ -9,7 +9,7 @@
       "collapsed_sections": [
         "a58Gjia9MDRw"
       ],
-      "authorship_tag": "ABX9TyPXAJZRgzsTSlpRf5sJYTr2",
+      "authorship_tag": "ABX9TyMwVT8tIbXSF/DuGcmAR49b",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -156,11 +156,13 @@
       },
       "source": [
         "#@markdown Select and Press CTRL + F10\n",
-        "country_selection = \"All\" #@param [\"All\", \"Not Mainland China\", \"Europe\", \"Europe + North America + Japan + Australia\", \"Russia\"] {allow-input: true}\n",
-        "stepsize =  2#@param {type:\"integer\"}\n",
-        "\n",
+        "country_selection = \"Mainland China\" #@param [\"All\", \"Not Mainland China\", 'Mainland China\", \"Europe\", \"Europe + North America + Japan + Australia\", \"Russia\"] {allow-input: true}\n",
+        "stepsize =  1#@param {type:\"integer\"}\n",
+        "df2=[]\n",
         "if country_selection == 'Not Mainland China':\n",
         "  df2 = df[df.index != 'Mainland China']\n",
+        "elif country_selection == 'Mainland China':\n",
+        "  df2 = df[df.index == 'Mainland China']\n",
         "elif country_selection == 'Europe':\n",
         "  df2 = df[df.index.isin(europe)]\n",
         "elif country_selection == 'Europe + North America + Japan + Australia':\n",
@@ -197,6 +199,8 @@
         "ax2 = ax1.twinx()\n",
         "ax1.plot(x, y1, 'b-')\n",
         "ax2.plot(x, y2, 'r-')\n",
+        "\n",
+        "fig.autofmt_xdate()\n",
         "\n",
         "# ax1.set_ylim(0,55000)\n",
         "start, end = ax1.get_xlim()\n",
@@ -236,6 +240,8 @@
         "y1 = df_plot[y11]\n",
         "y2 = df_plot[y21]\n",
         "fig, ax1 = plt.subplots(figsize=(20,6))\n",
+        "\n",
+        "fig.autofmt_xdate()\n",
         "\n",
         "# ax2 = ax1.twinx()\n",
         "line1, = ax1.plot(x, y1, 'g-', label=y11)\n",
@@ -277,6 +283,8 @@
         "y1 = df_plot[y11]\n",
         "y2 = df_plot[y21]\n",
         "fig, ax1 = plt.subplots(figsize=(20,6))\n",
+        "\n",
+        "fig.autofmt_xdate()\n",
         "\n",
         "# ax2 = ax1.twinx()\n",
         "line1, = ax1.plot(x, y1, 'b-', label=y11)\n",
@@ -321,7 +329,7 @@
         "    mortality_rate = value3_lookup / value2_lookup * 100\n",
         "    mortality_rate_list.append(mortality_rate)\n",
         "    for index2, row2 in df_temp2.iterrows():\n",
-        "      if row2['Confirmed'] >= value_lookup:\n",
+        "      if row2['Confirmed'] >= (value_lookup+value3_lookup):\n",
         "        date1 = datetime.strptime(row['index'], '%Y-%m-%d')\n",
         "        date2 = datetime.strptime(row2['index'], '%Y-%m-%d')\n",
         "        recovery_time = date1-date2\n",
@@ -347,14 +355,16 @@
         "line1, = ax1.plot(x, y1, 'b-', label=y11)\n",
         "line2, = ax2.plot(x, y2, 'r-', label=y21)\n",
         "\n",
+        "fig.autofmt_xdate()\n",
+        "\n",
         "# ax1.set_ylim(0,55000)\n",
         "start, end = ax1.get_xlim()\n",
         "# stepsize = 5\n",
         "ax1.xaxis.set_ticks(np.arange(start, end, stepsize))\n",
         "\n",
         "ax1.set_xlabel('Date')\n",
-        "ax1.set_ylabel('Days', color='b')\n",
-        "ax2.set_ylabel('%', color='r')\n",
+        "ax1.set_ylabel('Days (Confirmed >= Recovered + Deaths)', color='b')\n",
+        "ax2.set_ylabel('% of Confirmed', color='r')\n",
         "\n",
         "title = 'Showing COVID-19 Development Statics of ' + country_selection\n",
         "plt.legend(handles=[line1,line2], loc='upper left')\n",
