--- a/Covid_19.ipynb
+++ b/Covid_19.ipynb
@@ -5,11 +5,10 @@
     "colab": {
       "name": "Covid-19.ipynb",
       "provenance": [],
-      "private_outputs": true,
       "collapsed_sections": [
         "a58Gjia9MDRw"
       ],
-      "authorship_tag": "ABX9TyMwVT8tIbXSF/DuGcmAR49b",
+      "authorship_tag": "ABX9TyN+95yvnV1PCal1CzNH7DiY",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -156,7 +155,7 @@
       },
       "source": [
         "#@markdown Select and Press CTRL + F10\n",
-        "country_selection = \"Mainland China\" #@param [\"All\", \"Not Mainland China\", 'Mainland China\", \"Europe\", \"Europe + North America + Japan + Australia\", \"Russia\"] {allow-input: true}\n",
+        "country_selection = \"Not Mainland China\" #@param [\"All\", \"Not Mainland China\", 'Mainland China\", \"Europe\", \"Europe + North America + Japan + Australia\", \"Russia\"] {allow-input: true}\n",
         "stepsize =  1#@param {type:\"integer\"}\n",
         "df2=[]\n",
         "if country_selection == 'Not Mainland China':\n",
