--- a/Covid_19.ipynb
+++ b/Covid_19.ipynb
@@ -5,10 +5,8 @@
     "colab": {
       "name": "Covid-19.ipynb",
       "provenance": [],
-      "collapsed_sections": [
-        "a58Gjia9MDRw"
-      ],
-      "authorship_tag": "ABX9TyN+95yvnV1PCal1CzNH7DiY",
+      "collapsed_sections": [],
+      "authorship_tag": "ABX9TyNJBrMclGiPe9Zql0yG0e6/",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -50,7 +48,7 @@
       "metadata": {
         "id": "Ipw826YVw5ZE",
         "colab_type": "code",
-        "cellView": "code",
+        "cellView": "form",
         "colab": {}
       },
       "source": [
@@ -68,7 +66,7 @@
       "metadata": {
         "id": "5dQmk2GEgFZ3",
         "colab_type": "code",
-        "cellView": "code",
+        "cellView": "form",
         "colab": {}
       },
       "source": [
@@ -107,9 +105,11 @@
       "metadata": {
         "id": "LYd1iM5NPYeD",
         "colab_type": "code",
-        "colab": {}
+        "colab": {},
+        "cellView": "form"
       },
       "source": [
+        "#@title\n",
         "europe = ['Belgium', 'Finland',\n",
         "       'France', 'Germany','Italy',\n",
         "       'Spain', 'Sweden',\n",
@@ -120,17 +120,23 @@
         "       'Sweden',\n",
         "       'UK', 'US']\n",
         "\n",
+        "middle_east = ['Egypt', \n",
+        "       'Iran', 'Iraq', 'Israel',\n",
+        "       'Lebanon', 'Macau',\n",
+        "       'United Arab Emirates']\n",
+        "\n",
         "all_countries = ['Australia', 'Belgium', 'Cambodia', 'Canada', 'Egypt', 'Finland',\n",
-        "       'France', 'Germany', 'Hong Kong', 'India', 'Italy', 'Japan', 'Macau',\n",
-        "       'Mainland China', 'Malaysia', 'Nepal', 'Others', 'Philippines',\n",
-        "       'Russia', 'Singapore', 'South Korea', 'Spain', 'Sri Lanka', 'Sweden',\n",
-        "       'Taiwan', 'Thailand', 'UK', 'US', 'United Arab Emirates', 'Vietnam']\n",
+        "       'France', 'Germany', 'Hong Kong', 'India', 'Iran', 'Iraq', 'Israel',\n",
+        "       'Italy', 'Japan', 'Lebanon', 'Macau', 'Mainland China', 'Malaysia',\n",
+        "       'Nepal', 'Others', 'Philippines', 'Russia', 'Singapore', 'South Korea',\n",
+        "       'Spain', 'Sri Lanka', 'Sweden', 'Taiwan', 'Thailand', 'UK', 'US',\n",
+        "       'United Arab Emirates', 'Vietnam']\n",
         "\n",
         "for t in df.index.unique():\n",
         "  if all_countries.count(t) == 0:\n",
         "    print('Missing: '+t)\n",
         "\n",
-        "# df.index.unique()"
+        "df.index.unique()"
       ],
       "execution_count": 0,
       "outputs": []
@@ -155,13 +161,17 @@
       },
       "source": [
         "#@markdown Select and Press CTRL + F10\n",
-        "country_selection = \"Not Mainland China\" #@param [\"All\", \"Not Mainland China\", 'Mainland China\", \"Europe\", \"Europe + North America + Japan + Australia\", \"Russia\"] {allow-input: true}\n",
+        "country_selection = \"Middle-East\" #@param [\"All\", \"Not Mainland China\", 'Mainland China\", \"Europe\", \"Europe + North America + Japan + Australia\", \"Russia\", \"Middle-East\", \"India\"] {allow-input: true}\n",
         "stepsize =  1#@param {type:\"integer\"}\n",
         "df2=[]\n",
         "if country_selection == 'Not Mainland China':\n",
         "  df2 = df[df.index != 'Mainland China']\n",
         "elif country_selection == 'Mainland China':\n",
         "  df2 = df[df.index == 'Mainland China']\n",
+        "elif country_selection == 'Middle-East':\n",
+        "  df2 = df[df.index.isin(middle_east)]\n",
+        "elif country_selection == 'India':\n",
+        "  df2 = df[df.index == 'India']\n",
         "elif country_selection == 'Europe':\n",
         "  df2 = df[df.index.isin(europe)]\n",
         "elif country_selection == 'Europe + North America + Japan + Australia':\n",
