--- a/Covid_19.ipynb
+++ b/Covid_19.ipynb
@@ -6,7 +6,7 @@
       "name": "Covid-19.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNJBrMclGiPe9Zql0yG0e6/",
+      "authorship_tag": "ABX9TyMeBspoe6xjlgqF/+b0V1A7",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -120,6 +120,21 @@
         "       'Sweden',\n",
         "       'UK', 'US']\n",
         "\n",
+        "asia = ['Cambodia',\n",
+        "       'Hong Kong',\n",
+        "       'Japan', 'Macau', 'Mainland China', 'Malaysia',\n",
+        "       'Nepal', 'Philippines', 'Singapore', 'South Korea',\n",
+        "       'Sri Lanka', 'Taiwan', 'Thailand',\n",
+        "       'Vietnam']\n",
+        "\n",
+        "asia_excl_mainland_china = ['Cambodia',\n",
+        "       'Hong Kong',\n",
+        "       'Japan', 'Macau', 'Malaysia',\n",
+        "       'Nepal', 'Philippines', 'Singapore', 'South Korea',\n",
+        "       'Sri Lanka', 'Taiwan', 'Thailand',\n",
+        "       'Vietnam']\n",
+        "\n",
+        "\n",
         "middle_east = ['Egypt', \n",
         "       'Iran', 'Iraq', 'Israel',\n",
         "       'Lebanon', 'Macau',\n",
@@ -161,7 +176,7 @@
       },
       "source": [
         "#@markdown Select and Press CTRL + F10\n",
-        "country_selection = \"Middle-East\" #@param [\"All\", \"Not Mainland China\", 'Mainland China\", \"Europe\", \"Europe + North America + Japan + Australia\", \"Russia\", \"Middle-East\", \"India\"] {allow-input: true}\n",
+        "country_selection = \"Asia excl Mainland China\" #@param [\"All\", \"Not Mainland China\", 'Mainland China\", \"Europe\", \"Europe + North America + Japan + Australia\", \"Russia\", \"Middle-East\", \"India\", \"Others\", \"Asia\", \"Asia excl Mainland China\"] {allow-input: true}\n",
         "stepsize =  1#@param {type:\"integer\"}\n",
         "df2=[]\n",
         "if country_selection == 'Not Mainland China':\n",
@@ -170,6 +185,10 @@
         "  df2 = df[df.index == 'Mainland China']\n",
         "elif country_selection == 'Middle-East':\n",
         "  df2 = df[df.index.isin(middle_east)]\n",
+        "elif country_selection == 'Asia':\n",
+        "  df2 = df[df.index.isin(asia)]\n",
+        "elif country_selection == 'Asia excl Mainland China':\n",
+        "  df2 = df[df.index.isin(asia_excl_mainland_china)]\n",
         "elif country_selection == 'India':\n",
         "  df2 = df[df.index == 'India']\n",
         "elif country_selection == 'Europe':\n",
@@ -178,6 +197,8 @@
         "  df2 = df[df.index.isin(western)]\n",
         "elif country_selection == 'Russia':\n",
         "  df2 = df[df.index == 'Russia']\n",
+        "elif country_selection == 'Others':\n",
+        "  df2 = df[df.index == 'Others']\n",
         "else:\n",
         "  df2 = df\n",
         "# df2.head()\n",
