--- a/Covid_19.ipynb
+++ b/Covid_19.ipynb
@@ -6,7 +6,7 @@
       "name": "Covid-19.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMeBspoe6xjlgqF/+b0V1A7",
+      "authorship_tag": "ABX9TyM+lEv9Uz9lASJyA2pnnMha",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -151,7 +151,7 @@
         "  if all_countries.count(t) == 0:\n",
         "    print('Missing: '+t)\n",
         "\n",
-        "df.index.unique()"
+        "# df.index.unique()"
       ],
       "execution_count": 0,
       "outputs": []
