--- a/Covid_19.ipynb
+++ b/Covid_19.ipynb
@@ -6,7 +6,7 @@
       "name": "Covid-19.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyM+lEv9Uz9lASJyA2pnnMha",
+      "authorship_tag": "ABX9TyNaIEDxR/mGRKWhdHK7p3Cx",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -176,7 +176,7 @@
       },
       "source": [
         "#@markdown Select and Press CTRL + F10\n",
-        "country_selection = \"Asia excl Mainland China\" #@param [\"All\", \"Not Mainland China\", 'Mainland China\", \"Europe\", \"Europe + North America + Japan + Australia\", \"Russia\", \"Middle-East\", \"India\", \"Others\", \"Asia\", \"Asia excl Mainland China\"] {allow-input: true}\n",
+        "country_selection = \"Russia\" #@param [\"All\", \"Not Mainland China\", 'Mainland China\", \"Europe\", \"Europe + North America + Japan + Australia\", \"Russia\", \"Middle-East\", \"India\", \"Others\", \"Asia\", \"Asia excl Mainland China\"] {allow-input: true}\n",
         "stepsize =  1#@param {type:\"integer\"}\n",
         "df2=[]\n",
         "if country_selection == 'Not Mainland China':\n",
@@ -351,27 +351,35 @@
         "date_list=[]\n",
         "days_list=[]\n",
         "mortality_rate_list=[]\n",
+        "value_temp = -1\n",
+        "value2_temp = -1\n",
+        "value3_temp = -1\n",
         "for index, row in df_temp2.iterrows():\n",
         "  if row['Recovered'] > 0:\n",
         "    value_lookup = row['Recovered']\n",
         "    value2_lookup = row['Confirmed']\n",
         "    value3_lookup = row['Deaths']\n",
         "    mortality_rate = value3_lookup / value2_lookup * 100\n",
-        "    mortality_rate_list.append(mortality_rate)\n",
-        "    for index2, row2 in df_temp2.iterrows():\n",
-        "      if row2['Confirmed'] >= (value_lookup+value3_lookup):\n",
-        "        date1 = datetime.strptime(row['index'], '%Y-%m-%d')\n",
-        "        date2 = datetime.strptime(row2['index'], '%Y-%m-%d')\n",
-        "        recovery_time = date1-date2\n",
-        "        recovery_time_date = datetime.strftime(date1, '%Y-%m-%d')\n",
-        "        recovery_days = recovery_time.days\n",
-        "        date_list.append(recovery_time_date)\n",
-        "        days_list.append(recovery_days)\n",
-        "        break\n",
+        "    # mortality_rate_list.append(mortality_rate)\n",
+        "    if(value_temp != value_lookup or value2_temp != value2_lookup or value3_temp != value3_lookup):\n",
+        "      for index2, row2 in df_temp2.iterrows():\n",
+        "        if row2['Confirmed'] >= (value_lookup+value3_lookup):\n",
+        "          date1 = datetime.strptime(row['index'], '%Y-%m-%d')\n",
+        "          date2 = datetime.strptime(row2['index'], '%Y-%m-%d')\n",
+        "          recovery_time = date1-date2\n",
+        "          recovery_time_date = datetime.strftime(date1, '%Y-%m-%d')\n",
+        "          recovery_days = recovery_time.days\n",
+        "          date_list.append(recovery_time_date)\n",
+        "          days_list.append(recovery_days)\n",
+        "          mortality_rate_list.append(mortality_rate)\n",
+        "          break\n",
+        "      value_temp = value_lookup\n",
+        "      value2_temp = value2_lookup\n",
+        "      value3_temp = value3_lookup\n",
+        "\n",
         "\n",
         "df_recovery_time = pd.DataFrame(days_list, index=date_list, columns=['RecoveryDays'])\n",
         "df_mortality_rate = pd.DataFrame(mortality_rate_list, index=date_list, columns=['MortalityRate'])\n",
-        "# print(df_recovery_time  )\n",
         "\n",
         "plt.style.use('ggplot')\n",
         "y11 = 'RecoveryDays'\n",
@@ -382,8 +390,13 @@
         "fig, ax1 = plt.subplots(figsize=(20,6))\n",
         "\n",
         "ax2 = ax1.twinx()\n",
-        "line1, = ax1.plot(x, y1, 'b-', label=y11)\n",
-        "line2, = ax2.plot(x, y2, 'r-', label=y21)\n",
+        "marker1 = 'o'\n",
+        "marker2 = 'x'\n",
+        "if df_recovery_time.shape[0] > 1:\n",
+        "  marker1 = ''\n",
+        "  marker2 = ''\n",
+        "line1, = ax1.plot(x, y1, 'b-', label=y11, marker=marker1)\n",
+        "line2, = ax2.plot(x, y2, 'r-', label=y21, marker=marker2)\n",
         "\n",
         "fig.autofmt_xdate()\n",
         "\n",
