--- a/Covid_19.ipynb
+++ b/Covid_19.ipynb
@@ -9,7 +9,7 @@
         "9qgrf6ZnK4k2",
         "mNWCnM28LVM8"
       ],
-      "authorship_tag": "ABX9TyOniWwQJfWeesvMol0epSDa",
+      "authorship_tag": "ABX9TyPbmDdzCAN7rqy54MbV56gC",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -11187,7 +11187,7 @@
         " \n",
         " \n",
         "\n",
-        "To run this notebook: **CTRL + F9**"
+        "To run this notebook log into your Google account and press **CTRL + F9**"
       ]
     },
     {
