--- a/COVID_19_Nederland.ipynb
+++ b/COVID_19_Nederland.ipynb
@@ -6,7 +6,7 @@
       "name": "COVID-19_Nederland.ipynb",
       "provenance": [],
       "private_outputs": true,
-      "authorship_tag": "ABX9TyPzrQ1fuK4AlcKwOYItRFHh",
+      "authorship_tag": "ABX9TyNM9//lXke8tTinyaWF/hap",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -33,6 +33,13 @@
         "colab": {}
       },
       "source": [
+        "'''\n",
+        "IMPORTANT: inital run might fail, just wait a few seconds and do RUN ALL again\n",
+        "\n",
+        "Animated gif is created in folder to the right: COVID19_Netherland.gif\n",
+        "\n",
+        "'''\n",
+        "\n",
         "try:\n",
         "  import geopandas as gpd\n",
         "except:\n",
@@ -206,6 +213,19 @@
         "for i in range(0,5):\n",
         "  images.append(imageio.imread(file_path))\n",
         "imageio.mimsave('../content/COVID19_Nederland.gif', images, fps=3, loop=0)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "cYIN0_VMNntx",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
       ],
       "execution_count": 0,
       "outputs": []
