--- a/Sterftecijfers_Nederland_COVID_19_periode_vergelijken_met_eerdere_jaren.ipynb
+++ b/Sterftecijfers_Nederland_COVID_19_periode_vergelijken_met_eerdere_jaren.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Sterftecijfers Nederland COVID-19 periode vergelijken met eerdere jaren.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOD8UYf2wnQKbp38Xr1Wd60",
+      "authorship_tag": "ABX9TyMvEgtCDZaGRPh+S4Vdx7YU",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -32,6 +32,8 @@
       "source": [
         "# Deaths of the Netherlands\r\n",
         "\r\n",
+        "**The 'interesting tables and graphs' are all the way at the bottom.**\r\n",
+        "Unlike other tables and graphs, full disclosure on how the tables and graphs are created from which source and how the data was processed.\r\n",
         "\r\n",
         "*   **Source:** CBS Open data, no other data is used\r\n",
         "*   **Note:** Everything is normalized to: deaths per 100.000 per week for the specific year\r\n",
