--- a/Sterftecijfers_Nederland_COVID_19_periode_vergelijken_met_eerdere_jaren.ipynb
+++ b/Sterftecijfers_Nederland_COVID_19_periode_vergelijken_met_eerdere_jaren.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Sterftecijfers Nederland COVID-19 periode vergelijken met eerdere jaren.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMvEgtCDZaGRPh+S4Vdx7YU",
+      "authorship_tag": "ABX9TyPkM9SU/+I50ldvPUtuGzsY",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -34,6 +34,8 @@
         "\r\n",
         "**The 'interesting tables and graphs' are all the way at the bottom.**\r\n",
         "Unlike other tables and graphs, full disclosure on how the tables and graphs are created from which source and how the data was processed.\r\n",
+        "\r\n",
+        "Most likely this Notebook will be updated every Friday around 15:00 CET. However, feel free to make a copy and run it by yourself.\r\n",
         "\r\n",
         "*   **Source:** CBS Open data, no other data is used\r\n",
         "*   **Note:** Everything is normalized to: deaths per 100.000 per week for the specific year\r\n",
@@ -64,7 +66,7 @@
         "cellView": "form",
         "collapsed": true,
         "id": "fc8aq_3OkMS5",
-        "outputId": "2b669914-dc5a-4b1d-c899-db7e94fcc9d7"
+        "outputId": "fff4213c-ea69-404a-9f0b-50da5ed51d24"
       },
       "source": [
         "#@title\n",
@@ -82,15 +84,12 @@
         {
           "output_type": "stream",
           "text": [
-            "Collecting cbsodata\n",
-            "  Downloading https://files.pythonhosted.org/packages/77/20/0686b69fcf50fa1e030e4db477ac792671889199a50085097b78d5b3efda/cbsodata-1.3.3-py3-none-any.whl\n",
+            "Requirement already satisfied: cbsodata in /usr/local/lib/python3.6/dist-packages (1.3.3)\n",
             "Requirement already satisfied: requests in /usr/local/lib/python3.6/dist-packages (from cbsodata) (2.23.0)\n",
             "Requirement already satisfied: idna<3,>=2.5 in /usr/local/lib/python3.6/dist-packages (from requests->cbsodata) (2.10)\n",
-            "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.6/dist-packages (from requests->cbsodata) (2020.12.5)\n",
-            "Requirement already satisfied: urllib3!=1.25.0,!=1.25.1,<1.26,>=1.21.1 in /usr/local/lib/python3.6/dist-packages (from requests->cbsodata) (1.24.3)\n",
             "Requirement already satisfied: chardet<4,>=3.0.2 in /usr/local/lib/python3.6/dist-packages (from requests->cbsodata) (3.0.4)\n",
-            "Installing collected packages: cbsodata\n",
-            "Successfully installed cbsodata-1.3.3\n"
+            "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.6/dist-packages (from requests->cbsodata) (2020.12.5)\n",
+            "Requirement already satisfied: urllib3!=1.25.0,!=1.25.1,<1.26,>=1.21.1 in /usr/local/lib/python3.6/dist-packages (from requests->cbsodata) (1.24.3)\n"
           ],
           "name": "stdout"
         }
@@ -153,7 +152,7 @@
         "cellView": "form",
         "collapsed": true,
         "id": "ryYo4tmvlN8r",
-        "outputId": "46e8a2d9-f284-49a5-b7fd-88495668f81d"
+        "outputId": "59d5e93f-dfb3-4554-cc91-bb83daebfbf8"
       },
       "source": [
         "#@title\n",
@@ -1599,7 +1598,7 @@
         "cellView": "form",
         "collapsed": true,
         "id": "mDse8th03kJ5",
-        "outputId": "62b0d279-93b8-4054-e4eb-6cbd3f614169"
+        "outputId": "6cc385e8-6476-4e47-992a-271ce410a2c8"
       },
       "source": [
         "#@title\n",
@@ -1677,7 +1676,7 @@
         "cellView": "form",
         "collapsed": true,
         "id": "uucjlZNN2vcP",
-        "outputId": "95b96dc8-8bde-45ed-eb4e-fc50269f64a3"
+        "outputId": "b2350d5d-4e82-4ebb-cfac-8d3b35d51460"
       },
       "source": [
         "#@title\n",
@@ -1727,7 +1726,7 @@
         "cellView": "form",
         "collapsed": true,
         "id": "GIYYittM50Ts",
-        "outputId": "26e86a8c-83cb-4a06-f566-dd7bcc7d413e"
+        "outputId": "dd388595-7eda-4283-ee6e-61c5cbfd9e37"
       },
       "source": [
         "#@title\n",
@@ -1808,7 +1807,7 @@
         "cellView": "form",
         "collapsed": true,
         "id": "SlQxO8JH6ZgA",
-        "outputId": "5877a30e-8521-4583-c043-731a127d5abd"
+        "outputId": "ffd6ff23-5d4a-4d14-96de-a233ebf8c71c"
       },
       "source": [
         "#@title\n",
@@ -3239,7 +3238,7 @@
         "cellView": "form",
         "collapsed": true,
         "id": "9CpGD6m71Gto",
-        "outputId": "2625194b-c4b4-4a21-90df-fc30a8824387"
+        "outputId": "8d8ad4d9-3850-4e6f-d07e-2bd36fdb4ba5"
       },
       "source": [
         "#@title\n",
@@ -3348,7 +3347,7 @@
         },
         "cellView": "form",
         "id": "fxLqagEYm0G0",
-        "outputId": "d33a1de4-e033-43b7-925c-35e40c5a5a5b"
+        "outputId": "c72305f9-6f99-4fa8-b9f3-f78a8c432d94"
       },
       "source": [
         "#@title\n",
@@ -3463,7 +3462,7 @@
         },
         "cellView": "form",
         "id": "EC6rN9XtOy-b",
-        "outputId": "35a42ecb-8703-4e03-a79e-3a3135d79901"
+        "outputId": "2d5ff94f-4450-4168-bf95-c3add34ab435"
       },
       "source": [
         "#@title\n",
@@ -3506,8 +3505,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "cellView": "form",
         "id": "35TJSKWdnwUu",
-        "outputId": "6fbff92c-7c8c-4c69-f98f-753a233454df"
+        "outputId": "877ad54f-72dd-46d4-a09a-08d11bfb41a5"
       },
       "source": [
         "#@title\n",
@@ -3553,7 +3553,7 @@
         "    headers.append(item)\n",
         "print(tabulate(df_all, headers=headers, tablefmt='orgtbl'))"
       ],
-      "execution_count": 13,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
@@ -3628,7 +3628,7 @@
         },
         "cellView": "form",
         "id": "dJQyXrfWh_4S",
-        "outputId": "2a0b19bc-3162-4a5b-854d-7bf40bd7d533"
+        "outputId": "7010f0d5-7614-4e09-f595-559622227c40"
       },
       "source": [
         "#@title\n",
@@ -3666,7 +3666,7 @@
         "plt.ylabel(\"Overledenen per 100.000\\ngenormaliseerd met interpolatie per week\")\n",
         "plt.show()"
       ],
-      "execution_count": 14,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "display_data",
