--- a/Sterftecijfers_Nederland_COVID_19_periode_vergelijken_met_eerdere_jaren.ipynb
+++ b/Sterftecijfers_Nederland_COVID_19_periode_vergelijken_met_eerdere_jaren.ipynb
@@ -67,7 +67,7 @@
         "cellView": "form",
         "collapsed": true,
         "id": "fc8aq_3OkMS5",
-        "outputId": "8fe95f5f-bd8d-4d03-9a7d-17d517939159"
+        "outputId": "3c352bd9-a1dd-42cd-cc8e-2686c8f952e8"
       },
       "source": [
         "#@title\n",
@@ -85,15 +85,12 @@
         {
           "output_type": "stream",
           "text": [
-            "Collecting cbsodata\n",
-            "  Downloading https://files.pythonhosted.org/packages/77/20/0686b69fcf50fa1e030e4db477ac792671889199a50085097b78d5b3efda/cbsodata-1.3.3-py3-none-any.whl\n",
+            "Requirement already satisfied: cbsodata in /usr/local/lib/python3.6/dist-packages (1.3.3)\n",
             "Requirement already satisfied: requests in /usr/local/lib/python3.6/dist-packages (from cbsodata) (2.23.0)\n",
             "Requirement already satisfied: idna<3,>=2.5 in /usr/local/lib/python3.6/dist-packages (from requests->cbsodata) (2.10)\n",
             "Requirement already satisfied: chardet<4,>=3.0.2 in /usr/local/lib/python3.6/dist-packages (from requests->cbsodata) (3.0.4)\n",
             "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.6/dist-packages (from requests->cbsodata) (2020.12.5)\n",
-            "Requirement already satisfied: urllib3!=1.25.0,!=1.25.1,<1.26,>=1.21.1 in /usr/local/lib/python3.6/dist-packages (from requests->cbsodata) (1.24.3)\n",
-            "Installing collected packages: cbsodata\n",
-            "Successfully installed cbsodata-1.3.3\n"
+            "Requirement already satisfied: urllib3!=1.25.0,!=1.25.1,<1.26,>=1.21.1 in /usr/local/lib/python3.6/dist-packages (from requests->cbsodata) (1.24.3)\n"
           ],
           "name": "stdout"
         }
@@ -156,7 +153,7 @@
         "collapsed": true,
         "cellView": "form",
         "id": "ryYo4tmvlN8r",
-        "outputId": "2b974044-1980-4290-a8c3-51ffaf7ca73f"
+        "outputId": "136ce680-b3e9-442c-9efa-3c8546ebff58"
       },
       "source": [
         "#@title\n",
@@ -1612,7 +1609,7 @@
         "collapsed": true,
         "cellView": "form",
         "id": "mDse8th03kJ5",
-        "outputId": "1564d813-e8e3-44bd-a339-13c8e37e63be"
+        "outputId": "59bec7fa-3f43-495f-a229-b6a2fe2212e8"
       },
       "source": [
         "#@title\n",
@@ -1690,7 +1687,7 @@
         "collapsed": true,
         "cellView": "form",
         "id": "uucjlZNN2vcP",
-        "outputId": "770a9396-d96a-4147-ed45-5cda1f4c45c7"
+        "outputId": "704b58bf-73e9-4c23-d528-2faa8852a280"
       },
       "source": [
         "#@title\n",
@@ -1740,7 +1737,7 @@
         "collapsed": true,
         "cellView": "form",
         "id": "GIYYittM50Ts",
-        "outputId": "fdb4a12d-4d12-4d31-8a48-bfb47202b024"
+        "outputId": "7a196f23-8393-497d-eb5c-4ddd1d28c7cf"
       },
       "source": [
         "#@title\n",
@@ -1821,7 +1818,7 @@
         "collapsed": true,
         "cellView": "form",
         "id": "SlQxO8JH6ZgA",
-        "outputId": "0871df7f-b2b3-4572-f62a-febee0b129ba"
+        "outputId": "5f75a992-5117-4c20-e9e0-6838a17e5fef"
       },
       "source": [
         "#@title\n",
@@ -3258,7 +3255,7 @@
         "collapsed": true,
         "cellView": "form",
         "id": "9CpGD6m71Gto",
-        "outputId": "73aaa288-604d-4d0d-e36d-901992f33b17"
+        "outputId": "a5fbcf7e-b644-48bd-85cd-e10956f6f5b7"
       },
       "source": [
         "#@title\n",
@@ -3366,7 +3363,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "fxLqagEYm0G0",
-        "outputId": "6222437b-b2af-4367-dda8-8ae93e6a3115"
+        "outputId": "805162c2-ea92-47a8-a999-9717b2c7e0e1"
       },
       "source": [
         "#@title\n",
@@ -3481,7 +3478,7 @@
           "height": 438
         },
         "id": "EC6rN9XtOy-b",
-        "outputId": "79b174c1-3edd-4ba1-f120-20666026986c"
+        "outputId": "ab30d95e-3223-40aa-9514-be46caa1a1a6"
       },
       "source": [
         "#@title\n",
@@ -3526,7 +3523,7 @@
         },
         "id": "35TJSKWdnwUu",
         "cellView": "form",
-        "outputId": "74654b1c-ec7e-44a7-a827-5209d0480aae"
+        "outputId": "faad666e-ec2c-40a5-da84-2e9ada8d6a67"
       },
       "source": [
         "#@title\n",
@@ -3648,7 +3645,7 @@
         },
         "id": "dJQyXrfWh_4S",
         "cellView": "form",
-        "outputId": "8032a3d5-1f97-4819-b26e-7706fc5e3fb5"
+        "outputId": "6fe73237-a221-4ac1-9548-f2b575de8324"
       },
       "source": [
         "#@title\n",
@@ -3689,7 +3686,7 @@
         "plt.ylabel(\"Overledenen per 100.000\\ngenormaliseerd met interpolatie per week\")\n",
         "plt.show()"
       ],
-      "execution_count": 16,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "display_data",
